# pmls

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: detect.rs  main.rs  manager.rs
src/managers/: apk.rs  apt.rs  apt_get.rs  asdf.rs  bin.rs  brew.rs  bun.rs  bundler.rs  cabal.rs  cargo_pm.rs  chocolatey.rs  composer.rs  conan.rs  conda.rs  corepack.rs  coursier.rs  cpanm.rs  deno.rs  dnf.rs  dotnet.rs  emerge.rs  eopkg.rs  flatpak.rs  flutter.rs  fnm.rs  gem.rs  goenv.rs  golang.rs  gradle.rs  guix.rs  hatch.rs  helm.rs  jenv.rs  leiningen.rs  luarocks.rs  macports.rs  mamba.rs  maven.rs  mill.rs  mint.rs  (+38 more)
