[package]
name = "pmls"
version = "1.2.1"
edition = "2024"
description = "Fast cross-platform CLI tool that lists installed package managers, their versions, and global package directories"
license = "MIT"
repository = "https://github.com/secondfry/pmls"
homepage = "https://github.com/secondfry/pmls"
keywords = ["package-manager", "cli", "detect", "toolchain"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pmls"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
rayon = "1.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.17"
which = "8.0.0"
